# bf_interpreter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bf_scripts/: Syntax.md  data_cell_size_test.bf  echo.bf  hello_world.bf  user_input.bf
src/: main.cpp  token.cpp  token.hpp  tokenize.cpp  tokenize.hpp
test/: errorDataPointerOutOfBound.sh  errorNoMatchingEndBracket.sh  errorNoMatchingStartBracket.sh  helloWorldTest.sh  memoryLeakTest.sh  userInputTest.sh
test/bf_scripts/: error_data_pointer_out_of_bound.bf  error_no_matching_end_bracket.bf  error_no_matching_start_bracket.bf
